// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create component should render a button to add new task if disabled is not true 1`] = `
<Button
  active={false}
  disabled={false}
  onClick={[Function]}
  type="button"
  variant="primary"
>
  Add new task
</Button>
`;

exports[`Create component should render a disabled button if disabled flag is provided 1`] = `
<Button
  active={false}
  disabled={true}
  onClick={[Function]}
  type="button"
  variant="primary"
>
  Add new task
</Button>
`;
